//// ------------------------------------------------------
//// THIS FILE WAS AUTOMATICALLY GENERATED (DO NOT MODIFY)
//// ------------------------------------------------------

Table Wallet {
  address String [pk]
  label String [not null, default: '']
  avatar String [not null, default: '']
  createdAt DateTime [default: `now()`, not null]
  lastLogin DateTime
  nonce String [unique, not null]
  role Role [not null, default: 'User']
  creator Creator
  comics WalletComic [not null]
}

Table Creator {
  id Int [pk, increment]
  email String [unique, not null]
  name String [unique, not null]
  slug String [unique, not null]
  avatar String [not null, default: '']
  banner String [not null, default: '']
  logo String [not null, default: '']
  description String [not null, default: '']
  flavorText String [not null, default: '']
  website String [not null, default: '']
  createdAt DateTime [default: `now()`, not null]
  deletedAt DateTime
  featuredAt DateTime
  verifiedAt DateTime
  popularizedAt DateTime
  emailConfirmedAt DateTime
  comics Comic [not null]
  wallet Wallet [not null]
  walletAddress String [unique, not null]
}

Table Comic {
  name String [unique, not null]
  slug String [pk]
  isMatureAudience Boolean [not null]
  cover String [not null, default: '']
  pfp String [not null, default: '']
  logo String [not null, default: '']
  description String [not null, default: '']
  flavorText String [not null, default: '']
  website String [not null, default: '']
  twitter String [not null, default: '']
  discord String [not null, default: '']
  telegram String [not null, default: '']
  instagram String [not null, default: '']
  tikTok String [not null, default: '']
  youTube String [not null, default: '']
  updatedAt DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  deletedAt DateTime
  featuredAt DateTime
  verifiedAt DateTime
  publishedAt DateTime
  popularizedAt DateTime
  completedAt DateTime
  genres Genre [not null]
  issues ComicIssue [not null]
  wallets WalletComic [not null]
  creator Creator [not null]
  creatorId Int [not null]
}

Table WalletComic {
  comic Comic [not null]
  comicSlug String [not null]
  wallet Wallet [not null]
  walletAddress String [not null]
  rating Int
  isSubscribed Boolean [not null, default: false]
  isFavourite Boolean [not null, default: false]
  isWhitelisted Boolean [not null, default: false]

  indexes {
    (comicSlug, walletAddress) [pk]
  }
}

Table Genre {
  name String [unique, not null]
  slug String [pk]
  icon String [not null, default: '']
  priority Int [not null]
  color String [not null]
  deletedAt DateTime
  comics Comic [not null]
}

Table ComicIssue {
  id Int [pk, increment]
  number Int [not null]
  title String [not null]
  slug String [not null]
  description String [not null, default: '']
  flavorText String [not null, default: '']
  cover String [not null, default: '']
  soundtrack String [not null, default: '']
  releaseDate DateTime [not null]
  createdAt DateTime [default: `now()`, not null]
  deletedAt DateTime
  featuredAt DateTime
  verifiedAt DateTime
  publishedAt DateTime
  popularizedAt DateTime
  comic Comic [not null]
  comicSlug String [not null]
  pages ComicPage [not null]
  nfts ComicIssueNft [not null]

  indexes {
    (number, comicSlug) [unique]
    (slug, comicSlug) [unique]
    (title, comicSlug) [unique]
  }
}

Table ComicIssueNft {
  mint String [pk]
  comicIssue ComicIssue [not null]
  comicIssueId Int [not null]
}

Table ComicPage {
  id Int [pk, increment]
  pageNumber Int [increment, not null]
  isPreviewable Boolean [not null, default: false]
  image String [not null]
  altImage String [not null, default: '']
  comicIssue ComicIssue [not null]
  comicIssueId Int [not null]

  indexes {
    (pageNumber, comicIssueId) [unique]
  }
}

Table CarouselSlide {
  id Int [pk, increment]
  image String [not null]
  title String [not null, default: '']
  subtitle String [not null, default: '']
  priority Int [not null]
  link String [not null]
  publishedAt DateTime [default: `now()`, not null]
  expiredAt DateTime [not null]
  location CarouselLocation [not null]
}

Table ComicToGenre {
  genresId String [ref: > Genre.slug]
  comicsId String [ref: > Comic.slug]
}

Enum Role {
  Superadmin
  Admin
  User
}

Enum CarouselLocation {
  Home
}

Ref: Creator.walletAddress - Wallet.address [delete: Cascade]

Ref: Comic.creatorId > Creator.id [delete: Cascade]

Ref: WalletComic.comicSlug > Comic.slug [delete: Cascade]

Ref: WalletComic.walletAddress > Wallet.address [delete: Cascade]

Ref: ComicIssue.comicSlug > Comic.slug [delete: Cascade]

Ref: ComicIssueNft.comicIssueId > ComicIssue.id [delete: Cascade]

Ref: ComicPage.comicIssueId > ComicIssue.id [delete: Cascade]